; ModuleID = '/home/carl/AnghaBench/libgit2/src/transports/extr_smart.c_is_forbidden_custom_header.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/transports/extr_smart.c_is_forbidden_custom_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@forbidden_custom_headers = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_forbidden_custom_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_forbidden_custom_header(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 @http_header_name_length(i8* %6)
  store i64 %7, i64* %5, align 8
  store i64 0, i64* %4, align 8
  br label %8

8:                                                ; preds = %24, %1
  %9 = load i64, i64* %4, align 8
  %10 = load i32*, i32** @forbidden_custom_headers, align 8
  %11 = call i64 @ARRAY_SIZE(i32* %10)
  %12 = icmp ult i64 %9, %11
  br i1 %12, label %13, label %27

13:                                               ; preds = %8
  %14 = load i32*, i32** @forbidden_custom_headers, align 8
  %15 = load i64, i64* %4, align 8
  %16 = getelementptr inbounds i32, i32* %14, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %3, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i64 @strncmp(i32 %17, i8* %18, i64 %19)
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %13
  store i32 1, i32* %2, align 4
  br label %28

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23
  %25 = load i64, i64* %4, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %4, align 8
  br label %8

27:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %27, %22
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i64 @http_header_name_length(i8*) #1

declare dso_local i64 @ARRAY_SIZE(i32*) #1

declare dso_local i64 @strncmp(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
